# recall

./: .gitignore  AGENTS.md  README.md  demo-exam.md  index.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy-pages.yml
recall/: __init__.py
recall/app/: __init__.py  main.py
recall/app/adapters/: __init__.py
recall/app/adapters/ai/: base.py  fake.py  ollama.py  openai.py
recall/app/adapters/files/: __init__.py  text_loader.py
recall/app/adapters/storage/: sqlite.py
recall/app/domain/: __init__.py  attempt.py  exam.py  question.py  score.py  source.py
recall/app/services/: __init__.py  question_generator.py  scoring.py  source_chunker.py
recall/app/ui/: __init__.py  main_window.py
src/: main.ts  styles.css
tests/: test_chunker.py  test_fake_generator.py  test_scoring.py  test_sqlite_store.py  test_text_loader.py
