[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "recall"
version = "0.1.0"
description = "Local-first desktop study app that turns text notes into active recall exams."
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
recall = "recall.app.main:main"

[tool.setuptools.packages.find]
include = ["recall*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
